tab visibility fix

--- a/app/design/frontend/Foxchapel/Store/Magento_Theme/web/css/source/_home.less
+++ b/app/design/frontend/Foxchapel/Store/Magento_Theme/web/css/source/_home.less
@@ -37,6 +37,10 @@
         .navigation {
             z-index: 99;
         }
+
+        .tabs-navigation {
+            opacity: 0;
+        }
     }
     //Top Categories
 
@@ -138,9 +142,6 @@
         background-color: @color-white;
         max-height: 600px;
 
-        .tabs-navigation {
-            opacity: 0;
-        }
         .tabs-content {
             opacity: 0;
             transition-duration: 0.3s;
@@ -186,7 +187,6 @@
                 background: #ebebeb;
                 box-shadow: 0px 4px 6px 1px rgba(0, 0, 0, 0.2);
                 bottom: 0;
-                opacity: 1;
                 z-index: 99;
 
                 @media only screen and (max-width: (@screen__m - 1)) {
